--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -9,13 +9,14 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_primary">
+        android:background="@color/color_primary"
+        android:elevation="@dimen/elevation_toolbar_4">
 
         <TextView
             android:id="@+id/users_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
+            android:layout_gravity="center"
             android:text="@string/app_name" />
 
     </FrameLayout>
