--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/user_item_avatar_image_view"
-        android:layout_width="@dimen/item_icon_size_48"
-        android:layout_height="@dimen/item_icon_size_48"
+        android:layout_width="@dimen/item_avatar_size_48"
+        android:layout_height="@dimen/item_avatar_size_48"
         tools:ignore="ContentDescription"
         tools:srcCompat="@drawable/ic_error_black_48" />
 
