--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/repositoriesFragment">
+    app:startDestination="@id/usersFragment">
 
     <fragment
-        android:id="@+id/repositoriesFragment"
+        android:id="@+id/usersFragment"
         android:name="com.achesnovitskiy.githubusers.ui.users.UsersFragment"
-        android:label="fragment_repositories"
+        android:label="fragment_users"
         tools:layout="@layout/fragment_users" >
         <action
-            android:id="@+id/action_repositoriesFragment_to_repoInfoFragment"
-            app:destination="@id/repoInfoFragment"
+            android:id="@+id/action_usersFragment_to_userInfoFragment"
+            app:destination="@id/userInfoFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -20,12 +20,12 @@
     </fragment>
 
     <fragment
-        android:id="@+id/repoInfoFragment"
+        android:id="@+id/userInfoFragment"
         android:name="com.achesnovitskiy.githubusers.ui.userinfo.UserInfoFragment"
-        android:label="RepoInfoFragment"
+        android:label="fragment_user_info"
         tools:layout="@layout/fragment_user_info" >
         <argument
-            android:name="repo_name"
+            android:name="user_name"
             app:argType="string" />
     </fragment>
 </navigation>
