[ADDED] splash screen [CHANGED] UI

--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -23,11 +23,12 @@
             android:layout_gravity="center|start"
             android:layout_marginStart="@dimen/spacing_small_8"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_arrow_left_black_24"
+            android:src="@drawable/ic_arrow_left_white_24"
             tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/user_info_title_text_view"
+            style="@style/Font.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -67,6 +68,7 @@
         android:layout_marginTop="@dimen/spacing_normal_16"
         android:gravity="end"
         android:text="@string/nickname_field"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/user_info_webpage"
         app:layout_constraintEnd_toStartOf="@+id/user_info_guideline"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +82,7 @@
         android:layout_marginTop="@dimen/spacing_small_8"
         android:gravity="end"
         android:text="@string/webpage_field"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/user_info_location"
         app:layout_constraintEnd_toStartOf="@+id/user_info_guideline"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +96,7 @@
         android:layout_marginTop="@dimen/spacing_small_8"
         android:gravity="end"
         android:text="@string/location_field"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/user_info_guideline"
         app:layout_constraintStart_toStartOf="parent"
