--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -14,6 +14,7 @@
 
         <TextView
             android:id="@+id/users_title_text_view"
+            style="@style/Font.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
