--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/spacing_small_8"
+        android:textColor="@android:color/black"
         tools:text="User" />
 
 </LinearLayout>
