--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,18 @@
         <item name="colorAccent">@color/color_accent</item>
     </style>
 
+    <!-- Splash Screen -->
+    <style name="AppTheme.Splash" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
+    <!-- Fonts -->
+    <style name="Font" />
+
+    <style name="Font.Title" parent="Font">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/font_size_large_18</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
