--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -36,6 +36,17 @@
 
     </FrameLayout>
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/user_info_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_info_toolbar"/>
+
     <ImageView
         android:id="@+id/user_info_avatar_image_view"
         android:layout_width="0dp"
